ported to java 8