@@ -3,7 +3,7 @@ package ar.edu.unrc.pellegrini.franco.bubblesort;
 import ar.edu.unrc.pellegrini.franco.pgas.PGAS;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.CoreMatchers.is;
@@ -16,19 +16,19 @@ class DistributedBubbleSortTest {
     final
     void bubbleSort() {
         try {
-            final List< Long > array      = new ArrayList<>(List.of(9L, 8L, 7L, 6L, 5L, 4L, 3L, 2L, 1L));
+            final List< Long > array      = Arrays.asList(9L, 8L, 7L, 6L, 5L, 4L, 3L, 2L, 1L);
             final long         lowerIndex = 0L;
             final long         upperIndex = array.size() - 1L;
             final PGAS< Long > PGAS       = new TestLongPGAS(array, lowerIndex, upperIndex);
             DistributedBubbleSort.bubbleSort(PGAS, lowerIndex, upperIndex);
-            assertThat(array, is(List.of(1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L, 9L)));
+            assertThat(array, is(Arrays.asList(1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L, 9L)));
 
-            final List< Long > array2      = new ArrayList<>(List.of(9L, 8L, 7L, 6L, 5L, 4L, 3L, 2L, 1L));
+            final List< Long > array2      = Arrays.asList(9L, 8L, 7L, 6L, 5L, 4L, 3L, 2L, 1L);
             final long         lowerIndex2 = 3L;
             final long         upperIndex2 = array.size() - 4L;
             final PGAS< Long > PGAS2       = new TestLongPGAS(array2, lowerIndex2, upperIndex2);
             DistributedBubbleSort.bubbleSort(PGAS2, lowerIndex2, upperIndex2);
-            assertThat(array2, is(List.of(9L, 8L, 7L, 4L, 5L, 6L, 3L, 2L, 1L)));
+            assertThat(array2, is(Arrays.asList(9L, 8L, 7L, 4L, 5L, 6L, 3L, 2L, 1L)));
         } catch ( final Exception e ) {
             fail(e);
         }
